Add jwt all middlewares.
