# docs/swagger.yaml
@@ -594,7 +594,7 @@ definitions:
         description: 黑名单ip
         example: ""
         type: string
-      client_ip_flow_limit:
+      clientip_flow_limit:
         description: "\b客户端ip限流"
         example: 0
         minimum: 0
@@ -745,6 +745,35 @@ definitions:
     - service_desc
     - service_name
     - weight_list
+    type: object
+  dto.TokensInput:
+    properties:
+      grant_type:
+        description: 授权类型
+        example: client_credentials
+        type: string
+      scope:
+        description: 权限范围
+        example: read_write
+        type: string
+    required:
+    - grant_type
+    - scope
+    type: object
+  dto.TokensOutput:
+    properties:
+      access_token:
+        description: access_token
+        type: string
+      expires_in:
+        description: expires_in
+        type: integer
+      scope:
+        description: scope
+        type: string
+      token_type:
+        description: token_type
+        type: string
     type: object
   middleware.Response:
     properties:
@@ -1108,6 +1137,34 @@ paths:
       summary: 服务统计
       tags:
       - 首页大盘
+  /oauth/tokens:
+    post:
+      consumes:
+      - application/json
+      description: 获取token
+      operationId: /oauth/tokens
+      parameters:
+      - description: body
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/dto.TokensInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.TokensOutput'
+              type: object
+      summary: 获取token
+      tags:
+      - OAUTH
   /service/service_add_grpc:
     post:
       consumes:
